--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <!-- Logo -->
                  <div class="col-4 logo">
-                    <img src="/Marksheet/Assets/logo clg.png" alt="">
+                    <img src="logo clg.png" alt="">
                  </div>
 
                  <!-- QR CODE -->
@@ -32,7 +32,7 @@
             </div>
             <!-- /* ===============================2nd============== */ -->
             <div class="row title">
-                <img src="/Marksheet/Assets/Hindusthan College of Engineering and Technology.jpg" alt="">
+                <img src="Hindusthan College of Engineering and Technology.jpg" alt="">
             </div>
 
             <!-- =========================3rd======================== -->
