--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
                 <!-- Logo -->
                  <div class="col-4 logo">
-                    <img src="/Marksheet/Assets/logo clg.png" alt="">
+                    <img src="logo clg.png" alt="">
                  </div>
 
                  <!-- QR CODE -->
                   <div class="col-4 qr">
-                    <img src="/Marksheet/Assets/qrcode_120429574_3244093f1971907f95c5c48e16f8ae40.png" alt="">
+                    <img src="qrcode_120429574_3244093f1971907f95c5c48e16f8ae40.png" alt="">
                 </div>
             </div>
             <!-- /* ===============================2nd============== */ -->
