--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                  <!-- QR CODE -->
                   <div class="col-4 qr">
-                    <img src="qrcode_120429574_3244093f1971907f95c5c48e16f8ae40.png" alt="">
+                    <img src="qrcode_120429574_3244093f1971907f95c5c48e16f8ae40.png" style="height:100px" alt="">
                 </div>
             </div>
             <!-- /* ===============================2nd============== */ -->
