--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <!-- /* ===============================2nd============== */ -->
             <div class="row title">
-                <img src="/Marksheet/Assets/Hindusthan College of Engineering and Technology.jpg" alt="">
+                <img src="Hindusthan College of Engineering and Technology.jpg" alt="">
             </div>
 
             <!-- =========================3rd======================== -->
